[package]
name = "workman"
version = "0.2.0"
edition = "2018"
description = "Command line utility to process commands using pool of workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
threadpool = "1.8.1"
rusqlite = "0.25.3"
ctrlc = "3.1.9"
strum = "0.21"
strum_macros = "0.21.1"
anyhow = "1.0.42"
tui = "0.15"
termion = "1.5"