[package]
name = "workman"
license = "MIT"
authors = ["zim32 <yurij.uvarov@gmail.com"]
version = "0.5.1"
categories = ["command-line-utilities"]
edition = "2018"
description = "Command line utility to process commands using pool of workers"
repository = "https://github.com/zim32/workman"
homepage = "https://github.com/zim32/workman"
documentation = "https://github.com/zim32/workman"
readme = "README.md"
keywords = ["pool", "worker"]

[package.metadata.deb]
maintainer = "zim32 <yurij.uvarov@gmail.com"
section = "utils"
priority = "optional"

[dependencies]
clap = "3.0.0-beta.2"
threadpool = "1.8.1"
rusqlite = "0.25.3"
strum = "0.21"
strum_macros = "0.21.1"
anyhow = "1.0.42"
tui = "0.15"
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"